--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "koa": "^2.13.3",
       "koa-bodyparser": "^4.3.0",
       "koa-logger": "^3.2.1",
-      "node-fetch": "^2.6.5"
+      "node-fetch": "^2.6.5",
+      "path-to-regexp": "^6.2.0"
     }
   }
   
